--- a/assets/additional_styles.css
+++ b/assets/additional_styles.css
@@ -4,6 +4,27 @@ body {
   font-family: "Open Sans";
 }
 
+h1, h2{
+  font-weight: 300;
+  line-height: 125%;
+}
+
+p{
+  font-size: 20px;
+  font-weight: 300;
+  line-height: 175%;
+}
+
+.blue_nav .navbar-brand, .blue_nav .btn-link, .btn-default  {
+  color: rgb(0,126,229);
+}
+
+footer h4{
+  color: rgb(153,153,153);
+    font-size: 16px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
 /* My standard vertical spacing classes */
 
 .padding-inside-top-xs {
