--- a/assets/additional_styles.css
+++ b/assets/additional_styles.css
@@ -15,16 +15,27 @@ p{
   line-height: 175%;
 }
 
-.blue_nav .navbar-brand, .blue_nav .btn-link, .btn-default  {
+.blue_nav .navbar-brand, .blue_nav .btn-link, .btn-default, .navbar-default .btn-link:hover {
   color: rgb(0,126,229);
 }
 
 footer h4{
   color: rgb(153,153,153);
-    font-size: 16px;
-    font-weight: 700;
+  font-size: 16px;
+  font-weight: 700;
+  margin-bottom: 10px;
+}
+
+footer li {
+    color: rgb(119,119,119);
     margin-bottom: 10px;
 }
+
+.navvar{
+  color: white;
+}
+
+
 /* My standard vertical spacing classes */
 
 .padding-inside-top-xs {
